Fix resource ids and align contact info better on mobile landscape view

--- a/web/style.css
+++ b/web/style.css
@@ -48,6 +48,13 @@
     row-gap: 22px;
     font-size: 20px;
   }
+
+  .contact-info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 22px;
+    align-self: center;
+  }
   
   .name {
     font-size: 32px;
